renderer/styles/style.css
/* ... */
.mcq-2-options-container-vertical .text-content-outer {
    height: 100%;
    display: table;
}

.mcq-2-options-container-vertical .text-content-inner {
    display: table-cell;
    vertical-align: middle;
}
.mcq-2-options-container-vertical .text-content>span {
    height: auto;
    position: relative;
    top: 0;
    bottom: 0;
    display: table-cell;
    align-items: center;
    vertical-align: middle;
}

.mcq-2-options-container-vertical .audio-option-image {
    height: 40%;
    top: 32%;
    left: -34%;
    position: relative;
    z-index: 10;
}

.mcq-2-options-container-vertical .audio-option-image-container {
    width: 11.51%;
    height: 100%;
    float: left;
}

.mcq-2-options-container-vertical .tick-icon-holder {
    position: relative;
    height: 7vh;
    display: table-cell;
    vertical-align: middle;
}

.text-option .tick-icon-holder>img {
    visibility: hidden;
}

.text-option.opt-selected .tick-icon-holder>img {
    visibility: visible;
}

